# gen-ai-agentic-ai-workshop

./: .gitignore  DAILY_NEW_SETUP.md  GIT_QUICK_COMMANDS.md  NEW_PROJECT_SETUP.md  QUICK_SETUP.md  README.md  WORKSHOP_CONCEPTS.md  pyproject.toml  sunny savita.txt
03_2026/03_29_2026/: ENCODING_EMBEDDING_CONCEPTS.md  encoding-embedding.ipynb
03_22_2026/test-dummy/: main.py  readme.txt
03_22_2026/test-dummy2/: main.py  pyproject.toml
03_29_2026/: EXAMPLE_COMPARISON_CONCEPTS.md  example-comparison.ipynb  text_utils.py
04_04_2026/: encoding-embedding.ipynb  encoding1.ipynb  encoding2.ipynb
04_05_2026/: REPORT.md  main.py  text_feature_engineering.ipynb
04_11_2026/: classical_word_embedding.ipynb
04_12_2026/: CUSTOM_WORD2VEC_CONCEPTS.md  README.md
04_18_2026/: SOTA-llm-embedding.ipynb
04_19_2026/: info.md
04_2026/04_04_2026/: ENCODING_EMBEDDING_CONCEPTS.md  encoding.ipynb  main.py
04_2026/04_05_2026/: ENCODING_AND_TEXT_FEATURE_ENGINEERING_CONCEPTS.md  README.md  encoding.ipynb  product_reviews.csv
04_2026/04_11_2026/: CLASSICAL_WORD_EMBEDDING_CONCEPTS.md  classical_word_embedding.ipynb  main.py
04_2026/04_12_2026/: main.py
04_2026/04_18_2026/: Notes and Links.txt
04_2026/04_19_2026/: TRANSFORMERS_EMBEDDINGS_NLP_CONCEPTS.md
04_2026/04_25_2026/: TRANSFORMER_ARCHITECTURE_CONCEPTS_04_25_2026.md
05_2026/05_16_2026/: app.py
Info/: DAILY_NEW_SETUP.md  PROMPT_FOR_NOTES.md  PROMPT_FOR_SESSION_SUMMARIZATION.md  README.md  python-intermediate-concepts.md  sunny savita.txt
MyMultimodalAIStudio/: README.md  app.py  requirements.txt
(+14 files in other folders)
