[project]
name = "gen-ai-agentic-ai"
version = "0.1.0"
description = "Gen AI & Agentic AI Training"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scikit-learn==1.4.2",
    "rank-bm25==0.2.2",
    "numpy==1.26.4",
    "scipy==1.11.4",
    "sentence-transformers==2.7.0",
    "gensim==4.3.2",
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=4.41.0",
    "datasets>=2.19.0",
    "pillow>=10.2.0",
    "mteb",
    "ipykernel",
    "langchain-google-genai",
    "langchain-openai",
    "nltk>=3.9.4",
    "matplotlib>=3.10.9",
    "seaborn>=0.13.2",
    "pdfplumber>=0.11.9",
    "pdfminer-six>=20251230",
]
